# jaato-client-telegram

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  TESTING.md  WHITELIST.md  config.example.yaml  deploy-vps.sh  jaato-client-telegram.yaml  pyproject.toml  start.sh  whitelist.example.json
.jaato/agents/: telegram_chat.md
.jaato/profiles/: telegram_chat.yaml
docs/: README.md  backlog.md
docs/design/: design-prompt.md  event-flow-diagram.md  facade-ws-migration.md  ipc-to-ws-migration.md  rendering-pipeline.md  session-lifecycle.md  vps-bootstrap-feasibility.md  ws-auth.md
docs/features/: abuse-protection.md  access-request-workflow.md  expandable-content.md  file-sharing.md  file-watching-sharing-summary.md  file-watching.md  host-tools.md  memory-continuity.md  permission-approval-ui.md  presentation-context.md  service-checklist.md  workspace-isolation.md
docs/fixes/: connection-recovery.md  file-mention-detection.md  ipc-recovery.md
docs/implementation/: implementation-review.md  peer-review-migration.md  phase1-mvp-summary.md  presentation-content-summary.md  sdk-author-summary.md  telemetry.md
docs/project/: improvements.md
examples/: service_manifest.example.json
examples/host_tools/: approval_webhook.py  daily_ephemerides.py  die_roller.py  docker_report.py  docker_status.py  gmail.py  image_search.py  mercadona.py  moon_phase.py  remind.py  reverse_text.py  screenshot.py  shopping_list.py  spanish_news.py  ttt.py  weather.py  youtube_search.py
jaatotelegram/: pyvenv.cfg
tests/: test_clarification.py  test_client.py  test_connection_recovery.py  test_expandable_content.py  test_filters.py  test_group.py  test_host_tool_reload.py  test_idle_notice.py  test_markdown_html.py  test_outbound_rate_limiter.py  test_permission_ui.py  test_presentation_context.py  test_rate_limiting.py  test_semantic_markup.py  test_session_pool_facade.py  test_stall_recovery.py  test_stream_segmentation.py  test_thread_continuity.py  test_tool_edit_seed.py  test_tools_venv.py  test_webhook_config.py  test_welcome.py  test_whitelist.py  test_workspace.py
(+76 files in other folders)
